--- a/PierresTreats/Views/Home/Index.cshtml
+++ b/PierresTreats/Views/Home/Index.cshtml
@@ -1,3 +1,17 @@
+@{
+  Layout = "_Layout";
+}
+
 <h1>Welcom to the Homepage! Congratulations</h1>
 
 <h3>Views/Home/Index.cshtml</h3>
+
+<p>@Html.ActionLink("See all Flavors", "Index", "Flavors")</p>
+<p>@Html.ActionLink("See all Treats", "Index", "Treats")</p>
+<p>@Html.ActionLink("Create an account", "Index", "Account")</p>
+
+
+@using (Html.BeginForm("LogOff", "Account"))
+{
+    <input type="submit" class="btn btn-default" value="Log out" />
+}
