--- a/PierresTreats/Views/Flavors/Index.cshtml
+++ b/PierresTreats/Views/Flavors/Index.cshtml
@@ -5,7 +5,7 @@
 @using PierresTreats.Models;
 @model IEnumerable<PierresTreats.Models.Flavor>
 
-<h1>Flavors for @User.Identity.Name</h1>
+<h1>Flavors: @User.Identity.Name</h1>
 
 @if (Model.Any())
 {
