--- a/PierresTreats/Views/Account/Index.cshtml
+++ b/PierresTreats/Views/Account/Index.cshtml
@@ -10,10 +10,12 @@
 
 @if (User.Identity.IsAuthenticated)
 {
-    <p>Hello @User.Identity.Name!</p>
-
-@* This is logout button *@
-
+    <p>Welcome user: @User.Identity.Name!</p>
+    <p>@Html.ActionLink("See all Flavors", "Index", "Flavors")</p>
+    <p>@Html.ActionLink("See all Treats", "Index", "Treats")</p>
+    @Html.ActionLink("Go To Homepage", "Index", "Home")
+    <br/>
+    <br/>
     @using (Html.BeginForm("LogOff", "Account"))
     {
         <input type="submit" class="btn btn-default" value="Log out" />
@@ -22,9 +24,9 @@
 
 else
 {
+    @Html.ActionLink("Go To Homepage", "Index", "Home")
     <p>@Html.ActionLink("Register", "Register")</p>
     <p>@Html.ActionLink("Log in", "Login")</p>
 }
 
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
-@Html.ActionLink("Go To Homepage", "Index", "Home")
+
