--- a/PierresTreats/Views/Treats/Details.cshtml
+++ b/PierresTreats/Views/Treats/Details.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Treat Details</h2>
 <hr />
-<h3>@Html.DisplayNameFor(model => model.TreatName): @Html.DisplayFor(model => model.TreatName)</h3>
+<h3>Treat Name: @Html.DisplayFor(model => model.TreatName)</h3>
 
 @if(@Model.Flavors.Count == 0)
 {
@@ -23,6 +23,13 @@ else
   </ul>
 }
 
+
+<p>@Html.ActionLink("Add new Flavor", "Create", "Flavors")</p>
 <p>@Html.ActionLink("Back to Treats", "Index")</p>
 <p>@Html.ActionLink("Edit Treat", "Edit", new { id = Model.TreatId })</p>
 <p>@Html.ActionLink("Delete Treat", "Delete", new { id = Model.TreatId })</p>
+
+@using (Html.BeginForm("LogOff", "Account"))
+{
+  <input type="submit" class="btn btn-default" value="Log out" />
+}
