--- a/PierresTreats/Views/Treats/Index.cshtml
+++ b/PierresTreats/Views/Treats/Index.cshtml
@@ -5,7 +5,7 @@
 @using PierresTreats.Models;
 @model IEnumerable<PierresTreats.Models.Treat>
 
-<h1>Treats for @User.Identity.Name</h1>
+<h1>Treats: @User.Identity.Name</h1>
 
 @if (Model.Any())
 {
